tests/test_assets/semantic/invalid/expressions/bitwise_literal_range.expected
semantic error at line 5: integer constant operand does not fit operation type
semantic error at line 6: integer constant operand does not fit operation type
semantic error at line 7: integer constant operand does not fit operation type
semantic error at line 8: integer constant operand does not fit operation type
semantic error at line 9: integer constant operand does not fit operation type
5 semantic errors generated.
